[gd_scene load_steps=11 format=1]

[ext_resource path="res://Scenes/Kracken/Kracken_tentacle.gd" type="Script" id=1]
[ext_resource path="res://Images/kraken.tex" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=2]

resource/name = "Emerge"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 38, 28 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision/layers")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1.5 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 2 ] }
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"has_emerged" } ] }

[sub_resource type="Animation" id=3]

resource/name = "Emerge2"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 47, 39 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision/layers")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 1.5 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 2 ] }
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 1.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"has_emerged" } ] }

[sub_resource type="Animation" id=4]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 28, 38 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision/layers")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 0 ] }

[sub_resource type="Animation" id=5]

resource/name = "Submerge2"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 39, 47 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision/layers")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ 0 ] }

[sub_resource type="Animation" id=6]

length = 1.1
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3, 0.6, 0.9, 1.1 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":0, "values":[ 18, 19, 21, 19, 18 ] }

[sub_resource type="Animation" id=7]

resource/name = "Wiggle2"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3, 0.6, 1 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 21, 22, 24, 21 ] }

[sub_resource type="Animation" id=8]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ] }

[node name="Tentacle" type="KinematicBody2D"]

transform/pos = Vector2( -46.9942, 32.024 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.5, 0, 0, 1.5, 0, -7.5 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 5
hframes = 10
frame = 18
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Emerge = SubResource( 2 )
anims/Emerge2 = SubResource( 3 )
anims/Submerge = SubResource( 4 )
anims/Submerge2 = SubResource( 5 )
anims/Wiggle = SubResource( 6 )
anims/Wiggle2 = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
visibility/light_mask = 2
transform/pos = Vector2( 0, -7.5 )
transform/scale = Vector2( 0.5, 1.5 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="HitAnimation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hit = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="EmergeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AttackTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="EmergeTimer" to="." method="_on_EmergeTimer_timeout"]

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]


